avances funciones de necesidad y cdp #29 #30
